# libsystimer

./: CMakeLists.txt  README.md
include/: QSysTimer.h  systimer.h
lib/: QSysTimer.cpp  core.c
tools/: systimertest.c
